<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="previous">Previous</string>
    <string name="next">Start</string>
    <!-- Strings used for first fragmnet -->
    <string name="first_fragment_label">Dodelido Game</string>
    <string name="welcome_text">Welcome to Dodelido!</string>
    <string name="about">About</string>
  
    <!-- Strings used for second fragment -->

    <string name="text_turn_phone1_f2">TURN YOUR PHONE TO LANDSCAPE</string>
    <string name="text_turn_phone2_f2">TURN YOUR PHONE TO LANDSCAPE</string>
    <string name="second_fragment_label">Get ready for the Game!</string>
    <string name="button_start_f2">Ready!</string>

    <!-- Strings used for third fragment -->
    <string name="third_fragment_label">New Game</string>
    <string name="register_text">Please register players</string>



    <!-- Strings used for fourth fragment -->
    <string name="fourth_fragment_label">Get Ready for next turn</string>
    <string name="back_To_Main">End current Game</string>
    <string name="title_next_player">The next player will be:</string>



    <!-- Strings used for fifth fragment -->
    <string name="fifth_fragment_label">DoDeLiDo</string>
    <string name="wrong">WRONG   !!!</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings used for sixth fragment -->
    <string name="sixth_fragment_label">Oh no!</string>
    <string name="button_continue_f6">Continue</string>
    <string name="button_exit">Exit</string>

    <!-- Strings used for seventh fragment -->
    <string name="seventh_fragment_label">Leave Current Game</string>
    <string name="button_exit_f7">Exit</string>
    <string name="text_enough_f7">Already enough of Dodelido?</string>
    <string name="text_player_f7">Player</string>
    <string name="text_healthpoints_f7">Health Points</string>
    <string name="text_enough_played_f7">Already enough of Dodelido?</string>

    <!-- Strings used for eighth fragment -->
    <string name="eighth_fragment_label">Game Over!</string>
    <string name="button_exit_f8">Exit</string>
    <string name="text_player_f8">Player</string>
    <string name="text_healthpoints_f8">Health Points</string>

    <!-- Strings used for ninth fragment -->
    <string name="ninth_fragment_label">About Dodelido</string>
    <string name="button_exit_f9">Exit</string>
    <string name="title_about_f9">The goal of Dodelido</string>
    <string name="title_instruction_f9">Playing instructions</string>
    <string name="text_about_f9">Try to survive as many rounds as possible by giving fast and correct answers. If your response is wrong or you hesitated, you lose valuable health points. And the more turns without a mistake the more points you will lose upon a mistake!</string>
    <string name="text_instruction_f9">The game contains 25 card types: five different animals each in 5 different colours. In every turn, three cards are displayed and the player on the move has to immediately shout out the most occurring trait (colour or animal). If two traits are present to the equal highest number, then "Dodelido" has to be called out. If the player gives a wrong or too late answer (i.e. after the countdown reaches 0), the other players have 5 seconds to press the wrong button (0 to -5 on the timer). When the wrong button is pressed the player who made the mistake will lose valuable health points. The longer no mistake was made the more points he will lose!
    Simple rules so far, no? One additional twist: as tortoises are slow animals, you have to add a "ehm" before the answer for each visible tortoise (e.g. “ehm ehm blue” if two tortoises are displayed).

    Here are some examples with the correct solution to help you getting started: </string>
    <string name="solution1_f9">Solution: Penguin!</string>
    <string name="solution2_f9">Solution: ehm nothing!</string>
    <string name="solution3_f9">Solution: ehm dodelido!</string>



</resources>
