<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NinthFragment">


    <Button
        android:id="@+id/button_exit_f9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_exit_f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_about_f9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_about_f9"
        app:layout_constraintBottom_toTopOf="@+id/title_instruction_f9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_goal_f9" />

    <TextView
        android:id="@+id/title_goal_f9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_about_f9"
        app:layout_constraintBottom_toTopOf="@+id/text_about_f9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_instruction_f9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_instruction_f9"
        app:layout_constraintBottom_toTopOf="@+id/text_instruction_f9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_about_f9" />

    <TextView
        android:id="@+id/text_instruction_f9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_instruction_f9"
        app:layout_constraintBottom_toTopOf="@+id/button_exit_f9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_instruction_f9" />

</androidx.constraintlayout.widget.ConstraintLayout>